--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.2.0
+torchtext==0.17.0
 numpy==1.26.4
 pandas==2.2.2
-scikit-learn==1.4.2
-matplotlib==3.8.4
-opencv-python-headless==4.9.0.80
-tqdm==4.66.4
-jupyterlab==4.2.1
+scikit-learn==1.5.0
+gdown==5.2.0
+matplotlib==3.8.0
